# test_jenkins_django

./: Dockerfile  docker-compose.prod.yml  pyproject.toml
config/: settings.py  urls.py
nginx/: Dockerfile
testdb/: admin.py  views.py
testdb/migrations/: 0001_initial.py
